fixed agenda bottom spacing

--- a/interface/interface.css
+++ b/interface/interface.css
@@ -287,9 +287,9 @@ a {
 
 .agenda {
   background-color: var(--bg-color);
-  width: var(--chat-width);
+  width: calc(var(--chat-width) - var(--interface-default-margin) * 2);
   padding-top: calc(var(--interface-default-margin) / 2);
-  padding-bottom: calc(var(--interface-default-margin) / 2);
+  padding-bottom: var(--interface-default-margin);
   padding-left: calc(var(--interface-default-margin) * 2);
   opacity: 1;
   border-bottom: var(--interface-border);
